[project]
name = "dataprivacyfinal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupynium>=0.2.7",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyright>=1.1.407",
    "scikit-learn>=1.7.2",
]

[tool.pyright]
venvPath='.'
venv=".venv"
exclude=['.venv']
